--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "PostgresConnection": "Host=localhost;Database=SupplyChainManagement;Username=postgres;Password=17022006"
   }
 }
